--- a/languages/rust/course.org
+++ b/languages/rust/course.org
@@ -1,9 +1,12 @@
 * Video: Rust for TypeScript Devs / ThePrimeagen
 ** 1
-- JS vs Rust
-  | specify readonly | specify mutability |
-  | undefined/null   | Option             |
-  | errores thrown   | errors returned    |
+|------------------+--------------------|
+| Typescript       | Rust               |
+|------------------+--------------------|
+| specify readonly | specify mutability |
+| undefined/null   | Option             |
+| errores thrown   | errors returned    |
+|------------------+--------------------|
 - TS Variables
   #+begin_src typescript
     const foo = 5; // sort of a constant
@@ -22,23 +25,27 @@
   - 0..=10
 - Rust, loop{} for infinite loop
 *** Collections
+
 - TS, collections
   #+begin_src typescript
     for (const [key, value] of Object.entries(obj))
     for (const value of [1,2,3])
     for (const idx in [1,2,3])
   #+end_src
+
 - RS, collection
   #+begin_src rust
-    for x in &some_array {}
-    vec![1,2,3]
+    for x in &some_array {} // looping
+    vec![1,2,3] // iteration
         .iter()
         .map()
         .collect::<Vec<_>>();
   #+end_src
-*** TS, you are adviced to NOT do return types
-*** Rust, no implicit return types
-*** Rust       impl STRUCT
+
+*** in TS, you are adviced to NOT do return types
+*** Rust, has no implicit return types
+*** Rust, impl STRUCT
+
 #+begin_src rust
   struct Foo {
       properties ...
@@ -52,12 +59,15 @@
       pub fn this(self) // takes the self itself
   }
   #+end_src
+
 *** Interfaces impl TRAIT
-- in TS
+
+- TS
   - you can have properties on interfaces
   - when you define an interface with the same name
     twice you end up with a combination of both definitions.
-- in RS
+
+- RS
   #+begin_src rust
     trait Foo { // like an interface
         fn method(&self) -> retType;
@@ -65,6 +75,7 @@
     impl Foo for MyStruct {
     }
   #+end_src
+
 *** Rust, numbers
 i<NUMBER> integer
 u<NUMBER> integer unsigned
@@ -88,6 +99,7 @@ isize = i<NUMBER> where NUMBER is your system arch
 - there are better ways to do them,
   and less need for them as you learn more
 *** vectors
+
 #+NAME: TYPESCRIPT
 #+begin_src typescript
   const a = [1,2,3,4,5];
@@ -108,7 +120,9 @@ isize = i<NUMBER> where NUMBER is your system arch
   let item = a[2]; // panics if outbound
   let item = a.get(2); // returns Option<T>
 #+end_src
+
 *** tuples
+
 #+NAME: TYPESCRIPT
 #+begin_src typescript
   const a = [5, "hello"]; // unfixed
@@ -121,15 +135,16 @@ isize = i<NUMBER> where NUMBER is your system arch
   }
   bar(a);
 #+end_src
+
 *** structure
-Rust, Destructuring
+
 #+begin_src rust
   struct MyStruct {
       x: usize,
       y: usize,
       z: usize,
   }
-  fn bar(MyStruct { y, z, .. }: MyStruct) -> bool {
+  fn bar(MyStruct { y, z, .. }: MyStruct) -> bool { // destructuring
       return y * z < 100;
   }
   fn main() {
@@ -148,6 +163,7 @@ Rust, Destructuring
       }
   }
 #+end_src
+
 *** todo!()
 - usefeul to leave some parts of the implementation incomplete
 - when you have a use case that is difficult to handle
@@ -160,4 +176,3 @@ Rust, Destructuring
   - Result<T>
 - If you .unwrap() and return a None,
   you program will still explode
-** 2
